<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        
        <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/navigation_search" />

        <item
            android:id="@+id/navigation_documents"
            android:icon="@drawable/ic_library_books_24dp"
            android:title="@string/navigation_documents" />

        <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/navigation_favorites" />

        <item
            android:id="@+id/navigation_notes"
            android:icon="@drawable/ic_note_24dp"
            android:title="@string/navigation_notes" />
            
    </group>

    <item android:title="External Resources">
        <menu>
            <item
                android:id="@+id/navigation_online_resources"
                android:icon="@drawable/ic_web_24dp"
                android:title="@string/navigation_online_resources" />
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/navigation_settings"
                android:icon="@drawable/ic_settings_24dp"
                android:title="@string/action_settings" />
                
            <item
                android:id="@+id/navigation_about"
                android:icon="@drawable/ic_info_24dp"
                android:title="@string/settings_about" />
        </menu>
    </item>

</menu>