<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.bahairesources.library.ui.search.SearchFragment"
        android:label="@string/navigation_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_reader"
            app:destination="@id/navigation_document_reader" />
    </fragment>

    <fragment
        android:id="@+id/navigation_documents"
        android:name="com.bahairesources.library.ui.documents.DocumentsFragment"
        android:label="@string/navigation_documents"
        tools:layout="@layout/fragment_documents">
        <action
            android:id="@+id/action_documents_to_reader"
            app:destination="@id/navigation_document_reader" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.bahairesources.library.ui.favorites.FavoritesFragment"
        android:label="@string/navigation_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_reader"
            app:destination="@id/navigation_document_reader" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.bahairesources.library.ui.notes.NotesFragment"
        android:label="@string/navigation_notes"
        tools:layout="@layout/fragment_notes">
        <action
            android:id="@+id/action_notes_to_reader"
            app:destination="@id/navigation_document_reader" />
    </fragment>

    <fragment
        android:id="@+id/navigation_online_resources"
        android:name="com.bahairesources.library.ui.online.OnlineResourcesFragment"
        android:label="@string/navigation_online_resources"
        tools:layout="@layout/fragment_online_resources" />

    <fragment
        android:id="@+id/navigation_document_reader"
        android:name="com.bahairesources.library.ui.reader.DocumentReaderFragment"
        android:label="Document Reader"
        tools:layout="@layout/fragment_document_reader">
        <argument
            android:name="document_id"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="document_path"
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>